# jemplater

./: README.md  build_and_deploy.sh  pyproject.toml
test/: run_test.sh  template.yml
tests/: run_test.sh  template-out.yml  variables.yml
